--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SettingActivity" android:launchMode="singleTask"/>
+        <activity android:name=".EditHomePage" android:launchMode="singleTask"/>
+        <activity android:name=".PersonalHome" android:launchMode="singleTask"/>
+        <activity android:name=".PersonalInfoActivity" android:launchMode="singleTask"/>
+
     </application>
 
 </manifest>
